chore(api): harden runtime-facing loader API